; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_git_revparse_single.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_git_revparse_single.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_revparse_single(i32** %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  %11 = load i32**, i32*** %5, align 8
  store i32* null, i32** %11, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @git_revparse_ext(i32** %9, i32** %10, i32* %12, i8* %13)
  store i32 %14, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  br label %22

17:                                               ; preds = %3
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @git_reference_free(i32* %18)
  %20 = load i32*, i32** %9, align 8
  %21 = load i32**, i32*** %5, align 8
  store i32* %20, i32** %21, align 8
  store i32 0, i32* %4, align 4
  br label %28

22:                                               ; preds = %16
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @git_object_free(i32* %23)
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @git_reference_free(i32* %25)
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %22, %17
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @git_revparse_ext(i32**, i32**, i32*, i8*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
